[gd_scene load_steps=19 format=2]

[ext_resource path="res://offline_levels/level3/manager.gd" type="Script" id=1]
[ext_resource path="res://offline_levels/level3/choices.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/Themes/file_dialog.tres" type="Theme" id=3]
[ext_resource path="res://offline_levels/general_scenes/instructions.tscn" type="PackedScene" id=4]
[ext_resource path="res://offline_levels/general_scenes/game_over.tscn" type="PackedScene" id=5]
[ext_resource path="res://nodes/level_pause.tscn" type="PackedScene" id=6]
[ext_resource path="res://inventory_system/data/resources/settings_data.tres" type="Resource" id=7]
[ext_resource path="res://resources/Themes/ui_theme1.tres" type="Theme" id=8]
[ext_resource path="res://offline_levels/result.tscn" type="PackedScene" id=9]
[ext_resource path="res://resources/soundtrack/level/button_click.wav" type="AudioStream" id=10]
[ext_resource path="res://resources/Themes/instruction.tres" type="Theme" id=11]
[ext_resource path="res://resources/offline_mode_Asset/level_4/13.png" type="Texture" id=12]
[ext_resource path="res://resources/offline_mode_Asset/level_4/15.png" type="Texture" id=13]
[ext_resource path="res://resources/offline_mode_Asset/level_4/14.png" type="Texture" id=14]
[ext_resource path="res://resources/offline_mode_Asset/level_4/16.png" type="Texture" id=15]
[ext_resource path="res://scenes/others/reset_timer.tscn" type="PackedScene" id=16]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[node name="level3" type="Control"]
script = ExtResource( 1 )
choice_scene = ExtResource( 2 )
settings_data = ExtResource( 7 )
clue_label = NodePath("clue")
score_label = NodePath("score")
choice1 = NodePath("choices/choices_container/choice1/image_holder")
choice2 = NodePath("choices/choices_container/choice2/image_holder")
choices = NodePath("choices")
popup_score_label = NodePath("popup_layer/game_over/main_popup/score")
game_over_popup = NodePath("popup_layer/game_over")
popup_next_button = NodePath("popup_layer/game_over/main_popup/GridContainer/next")
popup_retry_button = NodePath("popup_layer/game_over/main_popup/GridContainer/retry")
popup_indicator_label = NodePath("popup_layer/game_over/main_popup/indicator")
crowns = NodePath("popup_layer/game_over/main_popup/crowns")
celebration = NodePath("popup_layer/game_over/AnimationPlayer/Sprite")
gameover_anim = NodePath("popup_layer/game_over/AnimationPlayer")
audioplayer = NodePath("popup_layer/game_over/AudioStreamPlayer")
net1_skills = NodePath("popup_layer/game_over/main_popup/net1_skills")
coins = NodePath("popup_layer/game_over/main_popup/GridContainer2/coins")
mascot = NodePath("animation_player/AnimationPlayer/correct")
bg = NodePath("animation_player/ColorRect")
animationplayer = NodePath("animation_player/AnimationPlayer")
animation_player = NodePath("popup_layer/instructions/main_popup/AnimationPlayer")
instructions_popup = NodePath("popup_layer/instructions")
instructions_sprite = NodePath("popup_layer/instructions/main_popup/AnimationPlayer/level3")

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll2" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll2" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll3" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll3" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll2" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll2" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll3" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll3" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer" type="CanvasLayer" parent="."]

[node name="pause" parent="popup_layer" instance=ExtResource( 6 )]

[node name="game_over" parent="popup_layer" instance=ExtResource( 5 )]
visible = false

[node name="instructions" parent="popup_layer" instance=ExtResource( 4 )]

[node name="content" parent="popup_layer/instructions/main_popup" index="1"]
margin_bottom = 30.0
rect_min_size = Vector2( 900, 230 )
text = "Your task is to carefully examine the provided object definition and then select the image that best matches it. Simply tap on the image that you believe is the perfect fit for the given description. Make your choice wisely to advance in the game. Have fun and good luck!"

[node name="AnimationPlayer" parent="popup_layer/instructions/main_popup" index="2"]
playback_speed = 0.25
anims/RESET = SubResource( 3 )
anims/animation = SubResource( 4 )

[node name="Sprite" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="0"]
visible = false

[node name="level4" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="2"]
visible = false

[node name="level5" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="3"]
visible = false

[node name="level7" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="4"]
visible = false

[node name="level8" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="5"]
visible = false

[node name="level6" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="6"]
visible = false

[node name="level2" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="7"]
visible = false

[node name="bg" type="NinePatchRect" parent="."]
margin_left = -3.0
margin_top = -2.0
margin_right = 1920.0
margin_bottom = 1083.0
texture = ExtResource( 12 )

[node name="score_board" type="Label" parent="."]
margin_left = 10.0
margin_top = 11.0
margin_right = 572.0
margin_bottom = 79.0
rect_min_size = Vector2( 300, 50 )
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score:   /5"
autowrap = true

[node name="score" type="Label" parent="."]
margin_left = 275.0
margin_top = 12.0
margin_right = 349.0
margin_bottom = 151.0
rect_min_size = Vector2( 40, 50 )
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
autowrap = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 458.0
margin_top = 57.0
margin_right = 1474.0
margin_bottom = 389.0
texture = ExtResource( 13 )

[node name="clue" type="Label" parent="."]
margin_left = 513.0
margin_top = 102.0
margin_right = 1430.0
margin_bottom = 347.0
rect_min_size = Vector2( 800, 140 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CLUE"
autowrap = true

[node name="choice1_bg" type="NinePatchRect" parent="."]
margin_left = 343.0
margin_top = 484.0
margin_right = 646.0
margin_bottom = 774.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 14 )

[node name="choice2_bg" type="NinePatchRect" parent="."]
margin_left = 1156.0
margin_top = 486.0
margin_right = 1459.0
margin_bottom = 776.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 14 )

[node name="choices" parent="." instance=ExtResource( 2 )]
position = Vector2( 25, 99 )
script = null

[node name="choices_container" parent="choices" index="0"]
margin_left = 351.0
margin_top = 418.0
margin_right = 1151.0
margin_bottom = 668.0

[node name="image_holder" parent="choices/choices_container/choice1" index="0"]
anchor_left = -0.024
anchor_top = -0.028
anchor_right = 0.044
anchor_bottom = 0.032

[node name="image_holder" parent="choices/choices_container/choice2" index="0"]
margin_left = -7.0
margin_top = -3.0
margin_right = 253.0
margin_bottom = 252.0

[node name="Sprite" type="Sprite" parent="choices"]
position = Vector2( 950, 605 )
texture = ExtResource( 15 )

[node name="animation_player" parent="." instance=ExtResource( 9 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "SFX"

[node name="instruction" type="Button" parent="."]
margin_left = 1812.0
margin_top = 971.0
margin_right = 1912.0
margin_bottom = 1071.0
theme = ExtResource( 11 )

[node name="manager" parent="." instance=ExtResource( 16 )]

[connection signal="pressed" from="popup_layer/game_over/main_popup/GridContainer/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="popup_layer/instructions/tap" to="." method="_on_tap_pressed"]
[connection signal="pressed" from="choices/choices_container/choice1" to="." method="_on_choice1_pressed"]
[connection signal="pressed" from="choices/choices_container/choice2" to="." method="_on_choice2_pressed"]
[connection signal="pressed" from="instruction" to="." method="_on_Button_pressed"]

[editable path="popup_layer/pause"]
[editable path="popup_layer/pause/CanvasLayer/settings"]
[editable path="popup_layer/game_over"]
[editable path="popup_layer/instructions"]
[editable path="choices"]
[editable path="animation_player"]
